Add version number 1.0.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "eslint.enable": false,
-    "jshint.enable": false
+    "jshint.enable": false,
+    "cSpell.words": [
+        "stampmeta"
+    ]
 }
